# PathWalker

./: README.md
Data/c3d_barefeet/: 3053171.c3d  3053173.c3d  3053174.c3d  3053175.c3d  3053176.c3d  3053177.c3d  3053178.c3d  3053179.c3d  3053180.c3d  3053181.c3d  3053182.c3d  3053183.c3d  3053184.c3d
Data/c3d_orthosis/: 3053138.c3d  3053139.c3d  3053140.c3d  3053141.c3d  3053142.c3d  3053143.c3d  3053144.c3d  3053145.c3d  3053146.c3d  3053147.c3d  3053148.c3d  3053150.c3d
Dependencies/RBDL-pathWalker2d/: CMakeLists.txt  Doxyfile
Dependencies/RBDL-pathWalker2d/addons/customforces/: Anderson2007TorqueMuscle.cc  Anderson2007TorqueMuscle.h  CMakeLists.txt  NeuroSwingTorsionSpring.cc  NeuroSwingTorsionSpring.h  customforces.h
Dependencies/RBDL-pathWalker2d/addons/customforces/tests/: CMakeLists.txt  testAnderson2007TorqueMuscle.cc  testNeuroSwingTorsionSpring.cc
Dependencies/RBDL-pathWalker2d/addons/geometry/: CMakeLists.txt  Function.h  README  SegmentedQuinticBezierToolkit.cc  SegmentedQuinticBezierToolkit.h  SmoothSegmentedFunction.cc  SmoothSegmentedFunction.h  SmoothSegmentedFunctionFactory.cc  SmoothSegmentedFunctionFactory.h  geometry.h
Dependencies/RBDL-pathWalker2d/addons/geometry/tests/: CMakeLists.txt  testSmoothSegmentedFunctionFactory.cc
Dependencies/RBDL-pathWalker2d/doc/html/: annotated.html  annotated.js  classes.html  dir_09c13fdaeb1907b55b031c97986864be.html  dir_09c13fdaeb1907b55b031c97986864be.js  dir_0c3900d0df6320b3b00d70f65adee182.html  dir_1233bc0a3e869c10318208e4553a4fcb.html  dir_1233bc0a3e869c10318208e4553a4fcb.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_83f96f5b052e07aa3714f1dcaa5487f4.html  dir_ac8eb6085e0975010a4d2857f424d317.html  dir_ac8eb6085e0975010a4d2857f424d317.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_de5374b656d6441f7dbe5134782837cb.html  dir_de5374b656d6441f7dbe5134782837cb.js  dir_e68e8157741866f444e17edd764ebbae.html  dir_e68e8157741866f444e17edd764ebbae.js  files.html  formula.repository  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func.js  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_j.html  functions_func_l.html  functions_func_m.html  (+85 more)
Dependencies/RBDL-pathWalker2d/doc/html/d0/d06/: _smooth_segmented_function_factory_8h.html  _smooth_segmented_function_factory_8h_source.html
Dependencies/RBDL-pathWalker2d/doc/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+56 more)
Dependencies/RBDL-pathWalker2d/examples/luamodel/: FindRBDL.cmake
Dependencies/RBDL-pathWalker2d/tests/: CMakeLists.txt
Dependencies/puppeteer-automarkers/: CMakeLists.txt
Dependencies/puppeteer-automarkers/src/: MarkerData.cc  MarkerData.h  ModelFitter.cc  PuppeteerApp.cc  fit_motion_automarkers.cc
InvKinDyn/code/: CMakeLists.txt  compute_id.cc  run_id  run_ik
InvKinDyn/results/: barefeet_3053171.csv  barefeet_3053171.fit  barefeet_3053171.q  barefeet_3053171.qdot  barefeet_3053171.torque  barefeet_3053173.csv  barefeet_3053173.fit  barefeet_3053173.q  barefeet_3053173.qdot  barefeet_3053173.torque  barefeet_3053174.csv  barefeet_3053174.fit  barefeet_3053174.q  barefeet_3053174.qdot  barefeet_3053174.torque  barefeet_3053175.csv  barefeet_3053175.fit  barefeet_3053175.q  barefeet_3053175.qdot  barefeet_3053175.torque  barefeet_3053176.csv  barefeet_3053176.fit  barefeet_3053176.q  barefeet_3053176.qdot  barefeet_3053176.torque  barefeet_3053177.csv  barefeet_3053177.fit  barefeet_3053177.q  barefeet_3053177.qdot  barefeet_3053177.torque  barefeet_3053178.csv  barefeet_3053178.fit  barefeet_3053178.q  barefeet_3053178.qdot  barefeet_3053178.torque  barefeet_3053179.csv  barefeet_3053179.fit  barefeet_3053179.q  barefeet_3053179.qdot  barefeet_3053179.torque  (+89 more)
LS-Barefoot/: plotResults.m
LS-Barefoot/code/: pathWalker2d.cc  pathWalker2d_Enums.h
LS-Barefoot/results/: expTraj.csv  pathWalker2d.csv  pathWalker2d_augmented.txt
MAPD-Barefoot/: plotResults.m
MAPD-Barefoot/code/: pathWalker2d.cc  pathWalker2d_Enums.h  pathWalker2d_Model.cc
MAPD-Barefoot/results/: expTraj.csv  pathWalker2d.csv
MAPD-Healthy/: plotResults.m
MAPD-Healthy/code/: pathWalker2d.cc  pathWalker2d_Enums.h  pathWalker2d_Model.h
MAPD-Healthy/results/: expTraj.csv  pathWalker2d.csv  pathWalker2d_augmented.txt
MAPD-Orthosis/: plotResults.m
MAPD-Orthosis/code/: pathWalker2d.cc  pathWalker2d_Enums.h
MAPD-Orthosis/results/: expTraj.csv  pathWalker2d.csv
MAPD-WS-Orthosis/: plotResults.m
MAPD-WS-Orthosis/code/: pathWalker2d.cc  pathWalker2d_Model.cc  pathWalker2d_Model.h
MAPD-WS-Orthosis/results/: pathWalker2d.csv
Models/: barefeet-healthy.lua  barefeet.lua  orthosis.lua
(+158 files in other folders)
