CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

CMAKE_POLICY(SET CMP0048 NEW)
CMAKE_POLICY(SET CMP0040 NEW)
 
SET ( RBDL_ADDON_CUSTOMFORCES_VERSION_MAJOR 1 )
SET ( RBDL_ADDON_CUSTOMFORCES_VERSION_MINOR 0 )
SET ( RBDL_ADDON_CUSTOMFORCES_VERSION_PATCH 0 )

SET ( RBDL_ADDON_CUSTOMFORCES_VERSION 
	${RBDL_ADDON_CUSTOMFORCES_VERSION_MAJOR}.${RBDL_ADDON_CUSTOMFORCES_VERSION_MINOR}.${RBDL_ADDON_CUSTOMFORCES_VERSION_PATCH}
)


PROJECT (RBDL_ADDON_CUSTOMFORCES VERSION ${RBDL_ADDON_CUSTOMFORCES_VERSION})

#SET (PROJECT_VERSION )



LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
		LINKER_LANGUAGE CXX
	)

INCLUDE_DIRECTORIES ( 
	${CMAKE_CURRENT_BINARY_DIR}/include/rbdl
)


SET(CUSTOMFORCES_SOURCES 
	customforces.h
	Anderson2007TorqueMuscle.h
	Anderson2007TorqueMuscle.cc
	NeuroSwingTorsionSpring.h
	NeuroSwingTorsionSpring.cc
	csvtools.h
	csvtools.cc
)

SET(CUSTOMFORCES_HEADERS	
	Anderson2007TorqueMuscle.h
	NeuroSwingTorsionSpring.h
	csvtools.h
	customforces.h
)

IF (RBDL_BUILD_STATIC)
	ADD_LIBRARY ( rbdl_customforces-static STATIC ${CUSTOMFORCES_SOURCES} )
	SET_TARGET_PROPERTIES ( rbdl_customforces-static PROPERTIES PREFIX "lib")
	SET_TARGET_PROPERTIES ( rbdl_customforces-static PROPERTIES OUTPUT_NAME "rbdl_customforces")
	TARGET_LINK_LIBRARIES (rbdl_customforces-static
		rbdl_geometry-static
		rbdl-static
	)


	INSTALL (TARGETS rbdl_customforces-static  
		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
		)
ELSE (RBDL_BUILD_STATIC)
	ADD_LIBRARY ( rbdl_customforces SHARED ${CUSTOMFORCES_SOURCES} )
	SET_TARGET_PROPERTIES ( rbdl_customforces PROPERTIES
		VERSION ${RBDL_VERSION}
		SOVERSION ${RBDL_SO_VERSION}
  	)

	TARGET_LINK_LIBRARIES (rbdl_customforces
		rbdl_geometry
		rbdl
		)


	INSTALL (TARGETS rbdl_customforces
		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		)
ENDIF (RBDL_BUILD_STATIC)

FILE ( GLOB headers 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
	)

INSTALL ( FILES ${CUSTOMFORCES_HEADERS} 
	DESTINATION 
	${CMAKE_INSTALL_INCLUDEDIR}/rbdl/addons/customforces
	)
